--- a/C/Makefile
+++ b/C/Makefile
@@ -1,10 +1,10 @@
 CC = gcc -g
 CFLAGS = -Iinclude -fopenmp 
-CLINK = -lm -lsqlite3
+CLINK = -lm -ldl
 OPT =
 
-main.exe: main.o km.o
-	$(CC) main.o km.o -o main.exe $(CLINK)
+main: main.o km.o
+	$(CC) main.o km.o -o main $(CLINK)
 
 main.o: main.c
 	$(CC) $(CFLAGS) $(OPT) -c main.c -o main.o
@@ -13,4 +13,4 @@ km.o: src/km.c
 	$(CC) $(OPT) -c src/km.c -o km.o
 
 clean:
-	rm *.o *.exe
+	rm *.o
